final steps of the drill

--- a/index.html
+++ b/index.html
@@ -62,11 +62,65 @@
             <a href="http://www.simonandschuster.com/books/The-Sun-Also-Rises/Ernest-Hemingway/9781501121968">Care to read The Sun Also Rises?</a>
             <div class="image4">
                 
-            </div>
 
-        </div>
 
     </div>
+
+</div>
+
+<div>
+
+<h1 class="text-style1" id="rank2">Six</h1>
+
+<h1 class="text-style1" id="rank3">Designated Survivor</h1>
+
+<h1 class="text-style1" id="rank4">Modern Family</h1>
+
+<h1 class="text-style2" id="rank1">Big Bang Theory</h1>
+
+<h1 class="text-style2" id="rank5">The Good Doctor</h1>
+
+    <div class="box5">
+
+        <ul>
+            <li class="friend5">Andrew</li>
+            <li class="friend2">Brad</li>
+            <li class="friend3">Eileen</li>
+            <li class="friend1">Isbert</li>
+            <li class="friend4">Alejandro</li>
+        </ul>
+
+    </div>
+
+    <br>
+
+    <div class="box5">
+
+        <ul>
+            <li class="trip1">Bora Bora</li>
+            <li class="trip4">Greece</li>
+            <li class="trip2">Ireland</li>
+            <li class="trip5">Patagonia</li>
+            <li class="trip3">Australia</li>
+        </ul>
+
+    </div>
+
+    <br>
+
+    <div class="box5">
+
+        <ul>
+            <li class="food3">Lucky Chinese</li>
+            <li class="food5">TGIFridays</li>
+            <li class="food1">Morton's</li>
+            <li class="food4">California Fish Grill</li>
+            <li class="food2">In n Out Burger</li>
+        </ul>
+
+    </div>
+
+</div>
 
 
 </body>
